// Vitest Snapshot v1

exports[`Slider > 向右轮播后，正确显示数据 1`] = `
"<div class=\\"flex relative overflow-hidden slider-container\\" data-v-45319cdb=\\"\\">
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(-100%, 0, 0) scale(0.8);\\">
    <div>a4</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(0%, 0, 0) scale(0.8);\\">
    <div>a5</div>
  </div>
  <div class=\\"slider-item will-change-transform slider-item__active\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(100%, 0, 0) scale(1);\\">
    <div>a1</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(200%, 0, 0) scale(0.8);\\">
    <div>a2</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(300%, 0, 0) scale(0.8);\\">
    <div>a3</div>
  </div>
</div>"
`;

exports[`Slider > 当轮播后，正确显示数据 1`] = `
"<div class=\\"flex relative overflow-hidden slider-container\\" data-v-45319cdb=\\"\\">
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(-100%, 0, 0) scale(0.8);\\">
    <div>a1</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(0%, 0, 0) scale(0.8);\\">
    <div>a2</div>
  </div>
  <div class=\\"slider-item will-change-transform slider-item__active\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(100%, 0, 0) scale(1);\\">
    <div>a3</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(200%, 0, 0) scale(0.8);\\">
    <div>a4</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(300%, 0, 0) scale(0.8);\\">
    <div>a5</div>
  </div>
</div>"
`;

exports[`Slider > 渲染正确 1`] = `
"<div class=\\"flex relative overflow-hidden slider-container\\" data-v-45319cdb=\\"\\">
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(-100%, 0, 0) scale(0.8);\\">
    <div>a5</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(0%, 0, 0) scale(0.8);\\">
    <div>a1</div>
  </div>
  <div class=\\"slider-item will-change-transform slider-item__active\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(100%, 0, 0) scale(1);\\">
    <div>a2</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(200%, 0, 0) scale(0.8);\\">
    <div>a3</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(300%, 0, 0) scale(0.8);\\">
    <div>a4</div>
  </div>
</div>"
`;

exports[`Slider > 轮播后，元素便宜正确且带有过渡动画 1`] = `
"<div class=\\"flex relative overflow-hidden slider-container\\" data-v-45319cdb=\\"\\">
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: all 300ms ease-out; transform: translate3d(-200%, 0, 0) scale(0.8);\\">
    <div>a5</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: all 300ms ease-out; transform: translate3d(-100%, 0, 0) scale(0.8);\\">
    <div>a1</div>
  </div>
  <div class=\\"slider-item will-change-transform slider-item__active\\" data-v-45319cdb=\\"\\" style=\\"transition: all 300ms ease-out; transform: translate3d(0%, 0, 0) scale(0.8);\\">
    <div>a2</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: all 300ms ease-out; transform: translate3d(100%, 0, 0) scale(1);\\">
    <div>a3</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: all 300ms ease-out; transform: translate3d(200%, 0, 0) scale(0.8);\\">
    <div>a4</div>
  </div>
</div>"
`;

exports[`Slider > 轮播后，正确显示数据 1`] = `
"<div class=\\"flex relative overflow-hidden slider-container\\" data-v-45319cdb=\\"\\">
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(-100%, 0, 0) scale(0.8);\\">
    <div>a1</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(0%, 0, 0) scale(0.8);\\">
    <div>a2</div>
  </div>
  <div class=\\"slider-item will-change-transform slider-item__active\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(100%, 0, 0) scale(1);\\">
    <div>a3</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(200%, 0, 0) scale(0.8);\\">
    <div>a4</div>
  </div>
  <div class=\\"slider-item will-change-transform\\" data-v-45319cdb=\\"\\" style=\\"transition: none; transform: translate3d(300%, 0, 0) scale(0.8);\\">
    <div>a5</div>
  </div>
</div>"
`;
